--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "pages:build": "npx @cloudflare/next-on-pages",
+    "pages:deploy": "npm run pages:build && wrangler pages deploy .vercel/output/static",
     "start": "next start",
-    "lint": "eslint",
-    "demo-order": "tsx scripts/create-demo-order.ts",
+    "lint": "next lint",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
     "db:seed": "tsx prisma/seed.ts",
-    "db:setup": "npx prisma migrate deploy && npm run db:seed"
+    "db:setup": "prisma generate && prisma db push && tsx prisma/seed.ts",
+    "demo-order": "tsx scripts/create-demo-order.ts"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -32,13 +37,13 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.555.0",
-    "next": "16.0.6",
+    "next": "15.0.3",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.11",
     "prisma": "^5.22.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.67.0",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
@@ -47,15 +52,16 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.13.5",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.6",
-    "tailwindcss": "^4",
+    "eslint-config-next": "15.0.3",
+    "tailwindcss": "^4.1.0",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
