--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@stripe/stripe-js": "^8.5.3",
     "@types/nodemailer": "^7.0.4",
+    "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
