--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/nodemailer": "^7.0.4",
     "@vercel/blob": "^2.0.0",
     "bcryptjs": "^3.0.3",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
