--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "jose": "^5.9.6",
     "lucide-react": "^0.555.0",
     "next": "15.0.3",
     "next-auth": "^4.24.13",
